Added coming soon page

--- a/coming-soon/index.html
+++ b/coming-soon/index.html
@@ -7,18 +7,17 @@
 	<link rel="shortcut icon" href="./src/ico/favicon.ico">
 
 	<!-- TWITTER CARD INFO -->
-	<meta name="twitter:card" content="This is a countdown page." />
-	<meta name="twitter:site" content="@chelos14" />
-	<meta name="twitter:creator" content="@chelos14" />
+	<meta name="twitter:card" content="" />
+	<meta name="twitter:site" content="" />
+	<meta name="twitter:creator" content="" />
 	<!-- EO - TWITTER CARD INFO -->
 
 	<!-- META INFO -->
 	<meta property="og:title" content="Comming Soon Page">
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://marcelosanchez.github.io/coming-soon-page-b4/">
-	<meta property="og:description" content="This is a countdown page.">
-	<meta property="og:image"
-		content="https://raw.githubusercontent.com/marcelosanchez/comming-soon-page-b4/master/src/img/preview.png">
+	<meta property="og:url" content="">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="">
 	<!-- <meta property="og:image" content="./src/img/preview.png"> -->
 
 	<meta property="og:locale" content="en_GB" />
@@ -47,7 +46,7 @@
 	<!-- <meta property="og:url" content="https://pwa.ed.team"> -->
 	<!-- EO - MANIFEST -->
 
-	<title>Comming Soon Page</title>
+	<title>Coming Soon</title>
 	<meta name="description" content="This is a countdown page.">
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
